fixed making order and removing basketProduct